--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-ECHO is on.
 # Mac system file
 .DS_Store
 
 # Windows system file
 Thumbs.db
+
+# IntelliJ IDEA
+.idea/
+*.iml
+
+# Maven
+target/
+
