תחילת תהליך מורנינג - עוסק

--- a/src/main/resources/users/user2.properties
+++ b/src/main/resources/users/user2.properties
@@ -6,9 +6,9 @@ issueDate=10/07/2021
 gender=זכר
 town=אבו
 street=אבו
-houseNumber=15
-apartment=3
-zipCode=6900000
-employment.income=12000
-amount = 1000
+houseNumber=12
+apartment=5
+zipCode=11111
+employment.income=1000
+amount = 1100
 
