--- a/src/main/resources/users/user1.properties
+++ b/src/main/resources/users/user1.properties
@@ -1,22 +1,19 @@
-
 firstName=משתמש
 lastName=ראשון
 phone=0532407762
-birthDate=01/01/2000
-issueDate=10/07/2021
-gender=זכר
+birthDate=01/01/2003
+issueDate=10/03/2021
+gender=נקבה
 town=אבו
 street=אבו
-houseNumber=15
-zipCode=6900000
-apartment=3
-employment.income=12000
-employmentStatus=שכיר
-occupation=הייטק
-profession=מפתח תוכנה
-amount = 200000
-securityAnswer=ששש
-
-
+houseNumber=12
+apartment=5
+zipCode=11111
+employment.income=1000
+amount = 1100
+securityAnswer =תשובה מהסביבה 
+bankCode=11
+branchCode=123
+accountNumber=12345678
 
 
