--- a/src/main/resources/users/user2.properties
+++ b/src/main/resources/users/user2.properties
@@ -11,4 +11,9 @@ apartment=5
 zipCode=11111
 employment.income=1000
 amount = 1100
+securityAnswer =תשובה מהסביבה 
+bankCode=11
+branchCode=123
+accountNumber=12345678
+
 
