--- a/src/main/resources/users/user3.properties
+++ b/src/main/resources/users/user3.properties
@@ -1,4 +1,3 @@
-
 firstName=משתמש
 lastName=שלישי
 phone=0532407762
@@ -7,16 +6,14 @@ issueDate=10/07/2021
 gender=זכר
 town=אבו
 street=אבו
-houseNumber=15
-zipCode=6900000
-apartment=3
-employment.income=12000
-employmentStatus=שכיר
-occupation=הייטק
-profession=מפתח תוכנה
-amount = 200000
-securityAnswer=ששש
-
-
+houseNumber=12
+apartment=5
+zipCode=11111
+employment.income=1000
+amount = 1100
+securityAnswer =תשובה מהסביבה 
+bankCode=11
+branchCode=123
+accountNumber=12345678
 
 
