--- a/src/main/resources/users/result.properties
+++ b/src/main/resources/users/result.properties
@@ -1,5 +1,5 @@
-firstName=משתמש
-lastName=שני
+firstName=מקסימום
+lastName=איזיריזולט 
 phone=0532407762
 birthDate=01/01/2000
 issueDate=10/07/2021
@@ -10,7 +10,7 @@ houseNumber=12
 apartment=5
 zipCode=11111
 employment.income=1000
-amount = 1100
+amount = 300000
 securityAnswer =תשובה מהסביבה 
 bankCode=11
 branchCode=123
