מסך מצב תעסוקתי תקין

--- a/src/main/resources/users/balkar.properties
+++ b/src/main/resources/users/balkar.properties
@@ -4,8 +4,8 @@ phone=0532407762
 birthDate=01/01/2000
 issueDate=10/07/2021
 gender=זכר
-town=אבו
-street=אבו
+town=ישראל
+street=ישראל
 houseNumber=12
 apartment=5
 zipCode=11111
@@ -15,5 +15,9 @@ securityAnswer =תשובה מהסביבה
 bankCode=11
 branchCode=123
 accountNumber=12345678
+employmentStatus=independent
+occupation=ACCOUNTING
+profession=ראיית חשבון
+
 
 
