--- a/src/main/resources/users/kablanim.properties
+++ b/src/main/resources/users/kablanim.properties
@@ -3,7 +3,7 @@ lastName=קבלני השיפוצים
 phone=0532407762
 birthDate=01/01/2000
 issueDate=10/07/2021
-gender=זכר
+gender=נקבה
 town=אבו
 street=אבו
 houseNumber=12
