מסך מטרת הלוואה מוגדר בסביבה

--- a/src/main/resources/users/balkar.properties
+++ b/src/main/resources/users/balkar.properties
@@ -11,13 +11,17 @@ apartment=5
 zipCode=11111
 employment.income=1000
 amount = 200000
-securityAnswer =תשובה מהסביבה 
+securityAnswer =תשובה מהסביב 
 bankCode=11
 branchCode=123
 accountNumber=12345678
 employmentStatus=independent
 occupation=ACCOUNTING
 profession=ראיית חשבון
+loanPurpose=VACATION
+
+
+
 
 
 
